# ImplantFramework

./: .gitignore  .gitmodules  CMakeLists.txt
Docker/: Dockerfile  docker-compose.yml
ImplantFramework/: CMakeLists.txt
ImplantFramework/examples/: CMakeLists.txt
ImplantFramework/examples/linux/: hivemind.cpp  main.cpp
ImplantFramework/examples/windows/: main.cpp
ImplantFramework/include/: hivemind.h  module.h  transport.h
ImplantFramework/lib/: CMakeLists.txt
ImplantFramework/lib/include/: comms.hpp  debugging.hpp  gather_implant_info.hpp  logic_controller.h  logic_controller.hpp  module.hpp  module_arg_parse.hpp  module_factory.hpp  transport.hpp  transport_factory.hpp
ImplantFramework/lib/platform/: linux.hpp  windows.hpp
ImplantFramework/lib/source/: hivemind.cpp
ImplantFramework/lib/source/logicController/: logic_controller.cpp
ImplantFramework/lib/source/modules/: linux_cmd.hpp  linux_ping.cpp  linux_ping.hpp  windows_cmd.hpp  windows_ping.cpp  windows_ping.hpp
ImplantFramework/lib/source/transports/: icmp.cpp  linux_icmp.cpp  linux_icmp.hpp  linux_tcp.cpp  linux_tcp.hpp  linux_udp.cpp  linux_udp.hpp  tcp.cpp  udp.cpp  win_icmp.cpp  win_tcp.cpp  win_udp.cpp  windows_icmp.cpp  windows_icmp.hpp  windows_tcp.cpp  windows_tcp.hpp  windows_udp.cpp  windows_udp.hpp
ImplantFramework/lib/source/utils/: linux_gather_implant_info.cpp  windows_gather_implant_info.cpp
ImplantFramework/source/: hivemind.cpp
cmake/: FindDoxybook2.cmake  Finddoxybook2.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  config.json  create_module.md  create_transport.md  developing.md  files.tmpl  index.md  index.rst  index_files.tmpl  mkdocs.yml  prequisites.md
docs/headers/: actions.rst  index.rst  module.rst  transport.rst
